--- a/panel/src/styles/utilities/theme.css
+++ b/panel/src/styles/utilities/theme.css
@@ -1,46 +1,94 @@
 [data-theme] {
-	--theme-color-h: 0;
-	--theme-color-s: 0%;
-	--theme-color-hs: var(--theme-color-h), var(--theme-color-s);
-	--theme-color-boost: 3%;
-
-	--theme-color-l-100: calc(var(--color-l-100) + var(--theme-color-boost));
-	--theme-color-l-150: calc(var(--color-l-150) + var(--theme-color-boost));
-	--theme-color-l-200: calc(var(--color-l-200) + var(--theme-color-boost));
-	--theme-color-l-250: calc(var(--color-l-250) + var(--theme-color-boost));
-	--theme-color-l-300: calc(var(--color-l-300) + var(--theme-color-boost));
-	--theme-color-l-350: calc(var(--color-l-350) + var(--theme-color-boost));
-	--theme-color-l-400: calc(var(--color-l-400) + var(--theme-color-boost));
-	--theme-color-l-450: calc(var(--color-l-450) + var(--theme-color-boost));
-	--theme-color-l-500: calc(var(--color-l-500) + var(--theme-color-boost));
-	--theme-color-l-550: calc(var(--color-l-550) + var(--theme-color-boost));
-	--theme-color-l-600: calc(var(--color-l-600) + var(--theme-color-boost));
-	--theme-color-l-650: calc(var(--color-l-650) + var(--theme-color-boost));
-	--theme-color-l-700: calc(var(--color-l-700) + var(--theme-color-boost));
-	--theme-color-l-750: calc(var(--color-l-750) + var(--theme-color-boost));
-	--theme-color-l-800: calc(var(--color-l-800) + var(--theme-color-boost));
-	--theme-color-l-850: calc(var(--color-l-850) + var(--theme-color-boost));
-	--theme-color-l-900: calc(var(--color-l-900) + var(--theme-color-boost));
-	--theme-color-l-950: calc(var(--color-l-950) + var(--theme-color-boost));
-
-	--theme-color-100: hsl(var(--theme-color-hs), var(--theme-color-l-100));
-	--theme-color-150: hsl(var(--theme-color-hs), var(--theme-color-l-150));
-	--theme-color-200: hsl(var(--theme-color-hs), var(--theme-color-l-200));
-	--theme-color-250: hsl(var(--theme-color-hs), var(--theme-color-l-250));
-	--theme-color-300: hsl(var(--theme-color-hs), var(--theme-color-l-300));
-	--theme-color-350: hsl(var(--theme-color-hs), var(--theme-color-l-350));
-	--theme-color-400: hsl(var(--theme-color-hs), var(--theme-color-l-400));
-	--theme-color-450: hsl(var(--theme-color-hs), var(--theme-color-l-450));
-	--theme-color-500: hsl(var(--theme-color-hs), var(--theme-color-l-500));
-	--theme-color-550: hsl(var(--theme-color-hs), var(--theme-color-l-550));
-	--theme-color-600: hsl(var(--theme-color-hs), var(--theme-color-l-600));
-	--theme-color-650: hsl(var(--theme-color-hs), var(--theme-color-l-650));
-	--theme-color-700: hsl(var(--theme-color-hs), var(--theme-color-l-700));
-	--theme-color-750: hsl(var(--theme-color-hs), var(--theme-color-l-750));
-	--theme-color-800: hsl(var(--theme-color-hs), var(--theme-color-l-800));
-	--theme-color-850: hsl(var(--theme-color-hs), var(--theme-color-l-850));
-	--theme-color-900: hsl(var(--theme-color-hs), var(--theme-color-l-900));
-	--theme-color-950: hsl(var(--theme-color-hs), var(--theme-color-l-950));
+	--theme-color-100: color-mix(
+		in oklch,
+		var(--color-l-100),
+		var(--theme-color-base)
+	);
+	--theme-color-150: color-mix(
+		in oklch,
+		var(--color-l-150),
+		var(--theme-color-base)
+	);
+	--theme-color-200: color-mix(
+		in oklch,
+		var(--color-l-200),
+		var(--theme-color-base)
+	);
+	--theme-color-250: color-mix(
+		in oklch,
+		var(--color-l-250),
+		var(--theme-color-base)
+	);
+	--theme-color-300: color-mix(
+		in oklch,
+		var(--color-l-300),
+		var(--theme-color-base)
+	);
+	--theme-color-350: color-mix(
+		in oklch,
+		var(--color-l-350),
+		var(--theme-color-base)
+	);
+	--theme-color-400: color-mix(
+		in oklch,
+		var(--color-l-400),
+		var(--theme-color-base)
+	);
+	--theme-color-450: color-mix(
+		in oklch,
+		var(--color-l-450),
+		var(--theme-color-base)
+	);
+	--theme-color-500: color-mix(
+		in oklch,
+		var(--color-l-500),
+		var(--theme-color-base)
+	);
+	--theme-color-550: color-mix(
+		in oklch,
+		var(--color-l-550),
+		var(--theme-color-base)
+	);
+	--theme-color-600: color-mix(
+		in oklch,
+		var(--color-l-600),
+		var(--theme-color-base)
+	);
+	--theme-color-650: color-mix(
+		in oklch,
+		var(--color-l-650),
+		var(--theme-color-base)
+	);
+	--theme-color-700: color-mix(
+		in oklch,
+		var(--color-l-700),
+		var(--theme-color-base)
+	);
+	--theme-color-750: color-mix(
+		in oklch,
+		var(--color-l-750),
+		var(--theme-color-base)
+	);
+	--theme-color-800: color-mix(
+		in oklch,
+		var(--color-l-800),
+		var(--theme-color-base)
+	);
+	--theme-color-850: color-mix(
+		in oklch,
+		var(--color-l-850),
+		var(--theme-color-base)
+	);
+	--theme-color-900: color-mix(
+		in oklch,
+		var(--color-l-900),
+		var(--theme-color-base)
+	);
+	--theme-color-950: color-mix(
+		in oklch,
+		var(--color-l-950),
+		var(--theme-color-base)
+	);
 
 	--theme-color-border: light-dark(
 		var(--theme-color-500),
@@ -69,64 +117,46 @@
 [data-theme^="red"],
 [data-theme^="error"],
 [data-theme^="negative"] {
-	--theme-color-h: var(--color-red-h);
-	--theme-color-s: var(--color-red-s);
-	--theme-color-boost: var(--color-red-boost);
+	--theme-color-base: var(--color-red-base);
 }
 
 [data-theme^="orange"],
 [data-theme^="notice"] {
-	--theme-color-h: var(--color-orange-h);
-	--theme-color-s: var(--color-orange-s);
-	--theme-color-boost: var(--color-orange-boost);
+	--theme-color-base: var(--color-orange-base);
 }
 
 [data-theme^="yellow"],
 [data-theme^="warning"] {
-	--theme-color-h: var(--color-yellow-h);
-	--theme-color-s: var(--color-yellow-s);
-	--theme-color-boost: var(--color-yellow-boost);
+	--theme-color-base: var(--color-yellow-base);
 }
 
 [data-theme^="blue"],
 [data-theme^="info"] {
-	--theme-color-h: var(--color-blue-h);
-	--theme-color-s: var(--color-blue-s);
-	--theme-color-boost: var(--color-blue-boost);
+	--theme-color-base: var(--color-blue-base);
 }
 
 [data-theme^="pink"],
 [data-theme^="love"] {
-	--theme-color-h: var(--color-pink-h);
-	--theme-color-s: var(--color-pink-s);
-	--theme-color-boost: var(--color-pink-boost);
+	--theme-color-base: var(--color-pink-base);
 }
 
 [data-theme^="green"],
 [data-theme^="positive"] {
-	--theme-color-h: var(--color-green-h);
-	--theme-color-s: var(--color-green-s);
-	--theme-color-boost: var(--color-green-boost);
+	--theme-color-base: var(--color-green-base);
 }
 
 [data-theme^="aqua"] {
-	--theme-color-h: var(--color-aqua-h);
-	--theme-color-s: var(--color-aqua-s);
-	--theme-color-boost: var(--color-aqua-boost);
+	--theme-color-base: var(--color-aqua-base);
 }
 
 [data-theme^="purple"] {
-	--theme-color-h: var(--color-purple-h);
-	--theme-color-s: var(--color-purple-s);
-	--theme-color-boost: var(--color-purple-boost);
+	--theme-color-base: var(--color-purple-base);
 }
 
 [data-theme^="gray"],
 [data-theme^="passive"] {
-	--theme-color-h: var(--color-gray-h);
-	--theme-color-s: var(--color-gray-s);
+	--theme-color-base: var(--color-gray-base);
 	--theme-color-back: light-dark(var(--color-gray-300), var(--color-gray-950));
-	--theme-color-boost: 10%;
 	--theme-color-icon: var(--color-gray-600);
 	--theme-color-text: var(--color-text);
 	--theme-color-text-highlight: var(--theme-color-text);
@@ -137,14 +167,11 @@
 	--theme-color-back: light-dark(var(--color-white), var(--color-gray-850));
 	--theme-color-text: var(--color-text);
 	--theme-color-text-highlight: var(--theme-color-text);
-	--color-h: var(--color-text);
 }
 
 /* Special Themes */
 [data-theme^="dark"] {
-	--theme-color-h: var(--color-gray-h);
-	--theme-color-s: var(--color-gray-s);
-	--theme-color-boost: var(--color-gray-boost);
+	--theme-color-base: var(--color-gray-base);
 	--theme-color-back: var(--color-gray-800);
 	--theme-color-icon: var(--color-gray-500);
 	--theme-color-text: var(--color-gray-200);
@@ -176,11 +203,4 @@
 	--theme-color-icon: var(--color-text);
 	--theme-color-text: var(--color-text);
 	--theme-color-text-highlight: var(--theme-color-text);
-}
-
-[data-theme] {
-	/** @deprecated */
-	--theme: var(--theme-color-700);
-	--theme-light: var(--theme-color-500);
-	--theme-bg: var(--theme-color-500);
 }
